# covariance_geometry

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists_ros.txt  package.xml
.github/workflows/: build_and_test.yml  cmake-single-platform.yml  format.yaml
core/: CMakeLists.txt  Config.cmake.in
core/include/covariance_geometry/: covariance_representation.hpp  pose_covariance_composition.hpp  pose_covariance_representation.hpp  pose_representation.hpp  test_utils.hpp
core/src/: covariance_representation.cpp  pose_composition.cpp  pose_covariance_composition.cpp  pose_covariance_representation.cpp  pose_representation.cpp
core/test/: pose_representation_test.cpp
include/covariance_geometry/: covariance_representation.hpp  pose_composition.hpp  pose_covariance_composition.hpp  pose_covariance_representation.hpp  pose_representation.hpp  test_utils.hpp
src/: covariance_representation.cpp  pose_composition.cpp  pose_covariance_composition.cpp  pose_covariance_representation.cpp  pose_representation.cpp
test/: pose_composition_test.cpp  pose_covariance_composition_test.cpp  pose_covariance_representation_test.cpp  pose_representation_test.cpp  test.cpp
